# yatzy

./: Cargo.toml  boilerplate.py
src/: lib.rs  main.rs
src/solver/: mod.rs  prob.rs  v2.rs
yatzy/: Cargo.toml
yatzy-compute-expected-values/: Cargo.toml  generate_prob_float.py  generate_prob_rational.py  verify.py
yatzy-compute-expected-values/src/: lib.rs  main.rs
yatzy-compute-expected-values/src/float/: mod.rs  prob.rs
yatzy-compute-expected-values/src/rational/: mod.rs  prob.rs
yatzy-solver/: Cargo.toml
yatzy-solver/src/: lib.rs  main.rs
yatzy-web/: Cargo.toml  config.example.toml
yatzy-web-frontend/: package.json  pnpm-lock.yaml  prettier.config.ts  svelte.config.js  vite.config.ts
yatzy-web-frontend/src/: app.html
yatzy-web-frontend/src/lib/: game.ts  state.ts  types.ts
yatzy-web-frontend/src/lib/components/: DieIcon.svelte  ScoreField.svelte  SelectDie.svelte
yatzy-web-frontend/src/routes/: +server.ts
yatzy-web-frontend/src/routes/[state]/: +page.server.ts  +page.svelte
yatzy-web/src/: main.rs
yatzy/src/: lib.rs  main.rs
