[package]
name = "yatzy-web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
clap = { version = "4.5.32", features = ["derive"] }
lazy_static = "1.5.0"
num-bigint = { version = "0.4.6", features = ["serde"] }
num-rational = { version = "0.4.2", features = ["serde"] }
num-traits = "0.2.19"
papaya = "0.2.1"
pct-str = "2.0.0"
postcard = "1.1.1"
regex = "1.11.1"
rustc-hash = "2.1.1"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.20"
yatzy = { workspace = true }
yatzy-solver = { workspace = true }
